# stable-diffusion

./: .gitignore  README.md  cli_sd_curses.py  fooocus-api.ipynb  fooocus-playground.ipynb  init_repl.py  pyproject.toml  repl_fooocus.py  repl_sd.py  requirements-streamdiffusion.txt  requirements.txt  stablediffusion-autoprompt.ipynb  stablediffusion-cli-curses.py  stablediffusion-cli.py  stablediffusion-derivate-img2img.ipynb  stablediffusion-with-autoprompt.ipynb  stablediffusion-with-derivation.ipynb  stablediffusion-with-prompt-variations.ipynb  stablediffusion-xl-with-refiner.ipynb  stablediffusion-xl.ipynb  stablediffusion.ipynb  stablediffusion.py  utils.py  utils_fooocus.py  utils_image.py  utils_prompt.py  utils_quote.py  utils_stablediffusion.py
notebooks/: fooocus-api.ipynb  fooocus-playground.ipynb  stablediffusion.ipynb
src/: cli_sd_curses.py  cli_streamlit.py  fooocus-api.ipynb  sd-cli.py  sdxl-turbo.ipynb  sdxl.ipynb  stablediffusion-xl.ipynb  stablediffusion-xlturbo.ipynb  stream-diffusion-streamlit.py
src/sdutils/: utils_prompt.py  utils_quote.py  utils_stablediffusion.py
stable_diffusion/: repl_fooocus.py  repl_sd.py  sdxlturbo_streamlit.py  stream-diffusion-streamlit.py  stream-diffusion.py  streamlit_runner.py
stable_diffusion/notebooks/: flux.ipynb  fooocus-playground.ipynb  stablediffusion-autoprompt.ipynb
stable_diffusion/sdutils/: utils_fooocus.py  utils_image.py  utils_stablediffusion.py
test/: kwargs.ipynb
