[tool.poetry]
name = "stable-diffusion"
version = "0.1.0"
description = ""
authors = ["kyrlian <kyrlian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.4.0"
torchvision = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
